update pom and add static assets
implement wro4j

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <module>pet-clinic-web</module>
     </modules>
     <version>0.0.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>sfg-pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
